cloudmodule-main/to-do-app-k8s/todo-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deployment
  labels:
    name: todo-app
    app: todo-app
spec:
  replicas: 3
  selector:
   matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
      - name: todo-app
        image: robin223567/todo-app:v1
        ports:
        - containerPort: 3000
          protocol: TCP
