cloudmodule-main/to-do-app-k8s/todo-app-service-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  labels:
    name: todo-app
spec:
  selector:
    app: todo-app
  type: LoadBalancer
  # loadBalancerIP is optional. MetalLB will automatically allocate an IP
  # from its pool if not specified. You can also specify one manually.
  # loadBalancerIP: x.y.z.a
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3000
